js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromElvisWithCrossModuleInliner/lib1/l1a.3.kt
inline fun foo(): Int? = 3
